[package]
name = "ruad"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }

[dependencies]
anyhow = "1.0"
humantime-serde = "1.1.1"
log = { version = "0.4", features = ["serde"] }
native-timer = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
simple-logging = "2.0.2"
wait-timeout = "0.2.0"
windows-service = "0.6.0"

[dependencies.windows]
version = "0.48.0"
features = [    
    "Win32_Foundation",    
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
]
